# Rationale-agent

./: .gitignore  BENCHMARKS.md  DISCOVERY_BRIEF_MAS.md  Dockerfile  PLAN_MAS_MVP.md  README.md  enhanced_agent.py  openapi.yaml  pyproject.toml
.github/workflows/: ci.yaml
docs/: component_diagram.md  plan_discover_engine.md  plan_infrastructure.md  plan_plan_generator.md  quality_audit.md
mas/: data_models.py  main.py  prompts.py
mas/config/: logging.py
mas/engines/: discover.py  plan.py
mas/hr_rl/: agent.py  comprehensive_fix.py  core.py  environment.py  model.py  production_run.py  run.py
mas/routers/: projects.py  rl.py
mas/services/: huggingface.py  plan_parser.py  planning.py  state_manager.py  synthesis.py
scripts/: benchmark_discover.py
tests/: red_team_tests.py  test_discover_engine.py  test_plan_generator.py  test_plan_parser.py  test_rl_router.py  test_services.py
tests/e2e/: test_workflow.py
