[tool.poetry]
name = "mas"
version = "0.1.0"
description = "Methodology Automation System"
authors = ["Jules"]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.112.0"
uvicorn = "^0.30.0"
huggingface_hub = "^0.36.0"
transformers = "^4.57.1"
torch = "^2.9.0"
accelerate = "^0.33.0"
pydantic = "^2.8.0"
structlog = "^24.3.0"
gitpython = "^3.1.43"
numpy = "1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
